Adicionado configurações e ajustes iniciais

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=Gerador de Frases
-spring.datasource.url=jdbc:postgresql://${DB_HOST}/
+spring.datasource.url=jdbc:postgresql://${DB_HOST}/dbfrases
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasopurce.driver-class-name=org.postgresql.Driver
